--- a/config/appconfig.json
+++ b/config/appconfig.json
@@ -1,7 +1,7 @@
 {
 	"app" : {
-		"localImageDir" : "C:/ALLEDATEN/SW_DEVEL/Projekte/NewsITpro/IPTC/PMDtools/GetIptcPmd_ALL/get-iptc-pmd/images/",
-		"localLogFpath" : "C:/ALLEDATEN/SW_DEVEL/Projekte/NewsITpro/IPTC/PMDtools/GetIptcPmd_ALL/get-iptc-pmd/getIptcPmd.log",
+		"localImageDir" : "F:/SW_Devel/Projekte/NewsITpro/IPTC/PMDtools/GetIptcPmd_ALL/get-iptc-pmd/images/",
+		"localLogFpath" : "F:/SW_Devel/Projekte/NewsITpro/IPTC/PMDtools/GetIptcPmd_ALL/get-iptc-pmd/iptcPmdByEt.log",
 		"logLevel" : 2
 	}
 }
